--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test-frontend-app",
   "version": "0.1.0",
+  "homepage": "https://github.com/viacheslav-saprykin/react_hygge",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,7 +11,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
