--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
@@ -24,7 +22,9 @@
     "start": "concurrently \"npm run start:server\" \"npm run start:app\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
