--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "test-frontend-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/viacheslav-saprykin/react_hygge/",
+  "homepage": "https://viacheslav-saprykin.github.io/react_hygge/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.3.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
